<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.android.dyep.MainActivity"
    android:id="@+id/drawerLayout"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_long_can_you_plank"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:id="@+id/time_title" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_line"
            android:background="@drawable/img_line"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/img_line" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:text="@string/_0_30"
            android:id="@+id/first_btn"
            android:background="@drawable/buttoncolor"
            android:layout_marginTop="15dp"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:text="@string/_0_45"
            android:id="@+id/second_btn"
            android:background="@drawable/buttoncolor"
            android:layout_marginTop="15dp"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:text="@string/_1_00"
            android:id="@+id/third_btn"
            android:background="@drawable/buttoncolor"
            android:layout_marginTop="15dp"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:text="@string/_1_15"
            android:id="@+id/forth_btn"
            android:background="@drawable/buttoncolor"
            android:layout_marginTop="15dp"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:text="@string/_1_30"
            android:id="@+id/fifth_btn"
            android:background="@drawable/buttoncolor"
            android:layout_marginTop="15dp"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:text="@string/_1_45"
            android:id="@+id/sexth_btn"
            android:background="@drawable/buttoncolor"
            android:layout_marginTop="15dp"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:text="@string/_2_00"
            android:id="@+id/seventh_btn"
            android:background="@drawable/buttoncolor"
            android:layout_marginTop="15dp"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:text="@string/_2_30"
            android:id="@+id/eighth_btn"
            android:background="@drawable/buttoncolor"
            android:layout_marginTop="15dp"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:text="@string/_3_00"
            android:id="@+id/ninth_btn"
            android:background="@drawable/buttoncolor"
            android:layout_marginTop="15dp"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp" />


    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id = "@+id/nav_view"
        app:menu="@menu/nav_menu"
        app:itemBackground="@drawable/pressed_gray"
        android:layout_gravity="start">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
