<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ready"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:id="@+id/video_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:id="@+id/youtube_title" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_line"
        android:background="@drawable/img_line"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/img_line" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plank"
        android:id="@+id/plank_btn"
        android:textAllCaps="false"
        android:background="@drawable/buttoncolor"
        android:layout_marginTop="20dp"
        android:textColor="@color/blue"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:id="@+id/skip_btn"
        android:textAllCaps="false"
        android:background="@drawable/buttoncolor"
        android:layout_marginTop="20dp"
        android:textColor="@color/blue"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp" />

</LinearLayout>